fix: large card collapsing

--- a/client/src/styles/global/_recipe-card.scss
+++ b/client/src/styles/global/_recipe-card.scss
@@ -3,10 +3,7 @@
   background: $color-bg-card;
   box-shadow: 0px 10px 34px -10px rgba(0, 0, 0, 0.15);
   border-radius: 15px;
-
-  & a {
-    color: inherit;
-  }
+  color: $color-text;
 }
 
 .card:not(.card_lg) {
